--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY = "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"
-BROWSERLESS_TOKEN = "e06959b5-c3ee-450f-9089-978fccf9ed11"
+OPENAI_API_KEY = ""
+BROWSERLESS_TOKEN = ""
